[package]
authors = ["codgician <15964984+codgician@users.noreply.github.com>"]
categories = ["parsing"]
description = "A naive parser combinator written while learning Rust"
documentation = "https://codgician.github.io/parsic"
edition = "2018"
homepage = "https://codgician.github.io/parsic"
name = "parsic"
readme = "README.md"
repository = "https://github.com/codgician/parsic"
version = "0.1.2"
license = "MIT"
license-file = "LICENSE"
[dependencies]
regex = "*"
